// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders H1 correctly 1`] = `
<Text
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "fontSize": 96,
      "fontWeight": "300",
      "letterSpacing": -1.5,
      "lineHeight": 96,
    }
  }
  type={1}
  typographyStyles={
    Object {
      "fontSize": 96,
      "fontWeight": "300",
      "letterSpacing": -1.5,
      "lineHeight": 96,
    }
  }
>
  Heading
</Text>
`;

exports[`it renders H1 when a value for anything 1`] = `
<Text
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
    }
  }
  type={0}
>
  Heading
</Text>
`;

exports[`it renders H1 when a value for anything 2`] = `
<Text
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
    }
  }
  type={8}
>
  Heading
</Text>
`;

exports[`it renders H2 correctly 1`] = `
<Text
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "fontSize": 60,
      "fontWeight": "300",
      "letterSpacing": -0.5,
      "lineHeight": 60,
    }
  }
  type={2}
  typographyStyles={
    Object {
      "fontSize": 60,
      "fontWeight": "300",
      "letterSpacing": -0.5,
      "lineHeight": 60,
    }
  }
>
  Heading
</Text>
`;

exports[`it renders H3 correctly 1`] = `
<Text
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "fontSize": 48,
      "lineHeight": 48,
    }
  }
  type={3}
  typographyStyles={
    Object {
      "fontSize": 48,
      "lineHeight": 48,
    }
  }
>
  Heading
</Text>
`;

exports[`it renders H4 correctly 1`] = `
<Text
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "fontSize": 34,
      "letterSpacing": 0.25,
      "lineHeight": 34,
    }
  }
  type={4}
  typographyStyles={
    Object {
      "fontSize": 34,
      "letterSpacing": 0.25,
      "lineHeight": 34,
    }
  }
>
  Heading
</Text>
`;

exports[`it renders H5 correctly 1`] = `
<Text
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "fontSize": 24,
      "lineHeight": 24,
    }
  }
  type={5}
  typographyStyles={
    Object {
      "fontSize": 24,
      "lineHeight": 24,
    }
  }
>
  Heading
</Text>
`;

exports[`it renders H6 correctly 1`] = `
<Text
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "fontSize": 20,
      "fontWeight": "500",
      "letterSpacing": 0.15,
      "lineHeight": 20,
    }
  }
  type={6}
  typographyStyles={
    Object {
      "fontSize": 20,
      "fontWeight": "500",
      "letterSpacing": 0.15,
      "lineHeight": 20,
    }
  }
>
  Heading
</Text>
`;
